fixed navbar collapse behavior

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -5,7 +5,7 @@
   color: #767D92;
 }
 .navbar-nav.mr-auto {
-  position: absolute;
+  position: relative;
   left: 65%;
   transform: translatex(-50%);
 }
@@ -24,3 +24,13 @@ div:after{
   border-radius:5px;
   z-index: 1;
   }
+  @media (max-width:767px) {
+    .navbar-nav.mr-auto {
+        left: 85%;
+    }
+}
+@media (min-width:768px) {
+  .navbar-nav.mr-auto {
+        left: 90%;
+  }
+}
